--- a/interviewai/package.json
+++ b/interviewai/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-markdown": "^10.1.0",
+    "rehype-raw": "^7.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
