--- a/interviewai/server/package.json
+++ b/interviewai/server/package.json
@@ -19,6 +19,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "groq-sdk": "^0.7.0"
+    "groq-sdk": "^0.7.0",
+    "react-markdown": "^10.1.0",
+    "rehype-raw": "^7.0.0"
   }
 }
