--- a/interviewai/server/package.json
+++ b/interviewai/server/package.json
@@ -16,8 +16,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.13.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.6.1",
     "express": "^4.18.2",
     "groq-sdk": "^0.7.0",
     "react-markdown": "^10.1.0",
